Moved and Added Maps
The maps have been moved into a sub-directoy, and 3 new maps were added.  Adjusted the blueprint to use the new maps.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -67,6 +67,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 bShouldDiscardSubLevelNavData=False
 bAutoCreateNavigationData=True
 bGenerateNavigationOnlyAroundNavigationInvokers=False
+bSpawnNavDataInNavBoundsLevel=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
